# IO-Card-G3

./: .gitignore  .gitmodules  README.md  pogopins02x06_pitch5.08.lib
ADS1115/: ADS1115IDGST.lib  ADS1115IDGST.mod
ESP32 Thing/: spark_esp32thing.lib
ESP32 Thing/spark_esp32thing.pretty/: Sparkfun_ESP32Thing.kicad_mod
G2/: AnalogSense.sch  BackPlane.sch  Connectors.sch  DigitalIO.sch  G2-cache.lib  G2-rescue.lib  G2.kicad_pcb  G2.pro  G2.sch  LocalPower.lib  MCU.sch  Power.sch  Status.sch  fp-lib-table  sym-lib-table
G2/.pretty/: MOLEX_1x9_39544-3009.kicad_mod
G2/PogoPins02x06_Pitch5.pretty/: PogoPins02x06_Pitch5.08.kicad_mod
G2/rescue-backup/: AnalogSense-2018-03-25-13-43-31.sch  DigitalIO-2018-03-25-13-43-31.sch  G2-cache-2018-03-25-13-43-31.lib  Power-2018-03-25-15-05-30.sch  sym-lib-table-2018-03-25-15-05-30
G3/: 12VDigitalOutput.sch  5VDigitalOutput.sch  AnalogInput.sch  AnalogSensCircuit.sch  AnalogSense.sch  Connectors.sch  DigitalIO.sch  DigitalInput.sch  DigitalOutput.sch  G3-cache.lib  G3.kicad_pcb  G3.pro  G3.sch  LocalPower.dcm  MCP23017.lib  MCU.sch  Power.sch  SDCard.sch  SelectableVoltageOutput.sch  SelectableVoltageOutut.sch  SimpleOutput.sch  Status.sch  StatusIndication.sch  fp-lib-table
G3/PCB Manufacturing/: G3-B.Cu.gbr  G3-B.Mask.gbr  G3-B.SilkS.gbr  G3-Dwgs.User.gbr  G3-Edge.Cuts.gbr  G3-F.Cu.gbr  G3-F.Mask.gbr  G3-F.SilkS.gbr  G3-NPTH.drl  G3-PTH.drl  G3-job.gbrjob
G3/PogoPins02x06_Pitch5.pretty/: PogoPins02x06_Pitch5.08_ContactSurface.kicad_mod
Gerbers/: G2-B.Cu.gbr  G2-B.Mask.gbr  G2-B.SilkS.gbr  G2-Dwgs.User.gbr  G2-Edge.Cuts.gbr  G2-F.Cu.gbr  G2-F.Mask.gbr  G2-F.SilkS.gbr  G2-NPTH.drl  G2-PTH.drl  G2-job.gbj
LocalComponents.pretty/: MOLEX_1x9_39544-3009.kicad_mod  WE68710814022_8x0.50mm_SMT_ZIF_Horizontal_Top.kicad_mod
hardware/: 12VDigitalOutput.sch  3VDigitalOutput.sch  5VDigitalOutput.sch  AnalogInput.sch  AnalogSensCircuit.sch  Connectors.sch  DigitalIO.sch  DigitalInput.sch  G3-cache.lib  G3.kicad_pcb  G3.pro  G3.sch  MCU.sch  Power.sch  SDCard.sch  SelectableVoltageOutput.sch  StatusIndication.sch
hardware/PCB Manufacturing/: G3-B.Cu.gbr  G3-B.Mask.gbr  G3-B.SilkS.gbr  G3-Dwgs.User.gbr  G3-Edge.Cuts.gbr  G3-F.Cu.gbr  G3-F.Mask.gbr  G3-F.SilkS.gbr  G3-NPTH.drl  G3-PTH.drl  G3-job.gbrjob
software/: Alarm_flowshart_draw_io.xml  CMakeLists.txt  G3.code-workspace  build.sh  empty.cpp  gdbinit  partitions.csv  sdkconfig
software/main/: AnalogCycler.h  AnalogValue.h  App.cpp  App.h  CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.h  DataListener.h  DeviceId.cpp  DeviceId.h  DigitalStatusValue.h  DigitalValue.h  I2CSetOutputCmd.h  I2CTask.cpp  I2CTask.h  IAlarmState.h  Mqtt.cpp  Mqtt.h  OutputNumber.h  SensorValue.h  Sntp.cpp  Sntp.h  Wifi.cpp  Wifi.h  ZoneData.h  commands.h  config_example.json  files.cmake  hardware_info.h  led_pin_output_number.h  main.cpp  notes.jsn  timer_id.h  wifi-creds.h
software/main/alarm/: Alarm.cpp  Alarm.h  AlarmConfig.cpp  AlarmConfig.h  AnalogSensor.cpp  AnalogSensor.h  BaseSensor.cpp  BaseSensor.h  DigitalSensor.cpp  DigitalSensor.h  config_constants.h  timer_id.h
software/main/alarm/event/: AnalogValue.h  ArmedStatus.h  CodeEntered.h  DigitalValue.h  NewConfig.h  SensorRestored.h  SensorTriggered.h
software/main/alarm/sensor/: AnalogSensor.cpp  AnalogSensor.h  BaseSensor.cpp  BaseSensor.h  DigitalSensor.cpp  DigitalSensor.h
software/main/alarm/state/: Armed.cpp  Armed.h  BaseState.cpp  BaseState.h  EntryDelay.cpp  EntryDelay.h  ExitDelay.cpp  ExitDelay.h  Idle.cpp  Idle.h  Triggered.cpp  Triggered.h
software/main/http/: TemplateDataRetriever.h  WSDataConnection.cpp  WSDataConnection.h
software/main/io/: I2CTask.cpp  I2CTask.h
software/main/io/analog/: AnalogCycler.cpp  AnalogCycler.h  RawAnalogValue.h
software/main/io/digital/: DigitalInputValue.h  DigitalOutputValue.h  DigitalStatusOutputValue.h  DigitalStatusValue.h  I2CSetOutputCmd.h  RawDigitalValue.h
software/main/io/wiegand/: IWiegandSignal.h  Wiegand.cpp  Wiegand.h
software/main/keypad/: keypad.cpp  keypad.h
software/main/network/: Mqtt.cpp  Mqtt.h  Sntp.cpp  Sntp.h  Wifi.cpp  Wifi.h
software/main/sound/: PlaySong.h  Player.cpp  Player.h
software/web_root/: README.md  index.html  index.js  package-lock.json  package.json
software/web_root/public/: index.html
software/web_root/src/: App.vue
software/web_root/src/components/: AnalogInput.vue  DigitalInput.vue  DigitalOutput.vue  Timeout.vue  User.vue
